fixed error in package.json Added longer texts to name in rest api Increased table size added col-tb-x classes for a 24 column grid table Added wrappable class

--- a/styles/app.less
+++ b/styles/app.less
@@ -3,5 +3,102 @@
 @import (inline) "../node_modules/jquery-autocomplete/jquery.autocomplete.css";
 
 .html{
-
 }
+.wrappable {
+    white-space: nowrap;
+    overflow: hidden;
+    -o-text-overflow: ellipsis;
+    -ms-text-overflow: ellipsis;
+    text-overflow: ellipsis;
+}
+.table {
+    table-layout:fixed;
+}
+
+.col-tb-1, .col-tb-2, .col-tb-3, .col-tb-4, .col-tb-5,.col-tb-6,.col-tb-7,.col-tb-8,.col-tb-9,.col-tb-10,.col-tb-11,.col-tb-12,.col-tb-13,.col-tb-14,.col-tb-15,.col-tb-16,.col-tb-17,.col-tb-18,.col-tb-19,.col-tb-20,.col-tb-21,.col-tb-22,.col-tb-23,.col-tb-24 {
+  position: relative;
+  min-height: 1px;
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
+
+@media (min-width: 992px) {
+  .col-tb-1, .col-tb-2, .col-tb-3, .col-tb-4, .col-tb-5, .col-tb-6, .col-tb-7, .col-tb-8, .col-tb-9, .col-tb-10, .col-tb-11, .col-tb-12, .col-tb-13, .col-tb-14, .col-tb-15, .col-tb-16, .col-tb-17, .col-tb-18, .col-tb-19, .col-tb-20, .col-tb-21, .col-tb-22, .col-tb-23, .col-tb-24  {
+    float: left;
+  }
+}
+
+.col-tb-24 {
+  width: 100%;
+}
+.col-tb-23 {
+  width: 95.83333333%;
+}
+.col-tb-22 {
+  width: 91.66666667%;
+}
+.col-tb-21 {
+  width: 87.49999997%;
+}
+.col-tb-20 {
+  width: 83.33333333%;
+}
+.col-tb-19 {
+  width: 79.16666667%;
+}
+.col-tb-18 {
+  width: 75%;
+}
+.col-tb-17 {
+  width: 70.83333333%;
+}
+.col-tb-16 {
+  width: 66.66666667%;
+}
+.col-tb-15 {
+  width: 62.5%;
+}
+.col-tb-14 {
+  width: 58.33333333%;
+}
+.col-tb-13 {
+  width: 54.16666667%;
+}
+.col-tb-12 {
+  width: 50%;
+}
+.col-tb-11  {
+  width: 45.83333333%;
+}
+.col-tb-10 {
+  width: 41.66666667%;
+}
+.col-tb-9  {
+  width: 37.5%;
+}
+.col-tb-8 {
+ width: 33.33333333%;
+}
+.col-tb-7  {
+ width: 29.16666667%;
+}
+.col-td-6 {
+  width: 25%;
+}
+.col-tb-5 {
+  width: 20.8333333%;
+}
+.col-tb-4 {
+  width: 16.66666667%;
+}
+.col-tb-3 {
+  width: 12.5%;
+}
+.col-tb-2 {
+  width: 8.33333333%;
+}
+.col-tb-1 {
+  width: 4.16666667%;
+}
+
